[gd_scene load_steps=12 format=2]

[ext_resource path="res://Textures/Player.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Icons/Diamond.png" type="Texture" id=3]
[ext_resource path="res://Sounds/speedboost.ogg" type="AudioStream" id=4]
[ext_resource path="res://Sounds/UltraSpeed.ogg" type="AudioStream" id=5]
[ext_resource path="res://Sounds/Cancel.ogg" type="AudioStream" id=6]
[ext_resource path="res://Sounds/plate2.ogg" type="AudioStream" id=7]
[ext_resource path="res://Sounds/Finished.ogg" type="AudioStream" id=8]
[ext_resource path="res://Sounds/transfer.ogg" type="AudioStream" id=9]
[ext_resource path="res://Sounds/Moving.ogg" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[node name="Player" type="KinematicBody2D"]
rotation = 1.5708
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Lookat" type="Node2D" parent="."]
position = Vector2( 0, -25 )

[node name="MoveCoolDown" type="Timer" parent="."]
wait_time = 0.1

[node name="highlight" type="ColorRect" parent="."]
visible = false
self_modulate = Color( 0.94902, 1, 0, 0.411765 )
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -20.0001
margin_top = -19.9999
margin_right = 19.9999
margin_bottom = 20.0001
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="."]
margin_left = -4.99999
margin_top = 2.00002
margin_right = 4.00001
margin_bottom = 11.0
rect_min_size = Vector2( 5, 0 )
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = -7.99997
margin_top = -11.0
margin_right = 8.00003
margin_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = -3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Energy" type="Label" parent="VBoxContainer"]
margin_left = 4.0
margin_top = 3.0
margin_right = 12.0
margin_bottom = 17.0
size_flags_horizontal = 4
text = "5"
align = 1
valign = 1

[node name="Boost" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="UltraBoost" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 6.992
max_distance = 2008.0

[node name="Invalid" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="Plate" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="Finished" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="Transfer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="Moving" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[connection signal="pressed" from="Select" to="." method="_on_Select_pressed"]
